@@ -1,2 +1,2 @@
-usr/share/gtk-doc/html/gtk* usr/share/doc/@DOC_PKG@
-usr/share/gtk-doc/html/gdk* usr/share/doc/@DOC_PKG@
+usr/share/gtk-doc/html/gdk*
+usr/share/gtk-doc/html/gtk*
